--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next-themes": "^0.4.6",
     "openai": "^5.11.0",
     "pdf-parse": "^1.1.1",
+    "pptxgenjs": "^3.12.0",
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
